--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -15,11 +15,11 @@
                     <div class="open-panel"><i class="ti-angle-right"></i></div>
                     <div class="chat-left-inner">
                         <div class="form-material">
-                            <input #input (keyup)="buscarContacto( input.value )" class="form-control p-20" type="text" placeholder="Buscar Contacto">
+                            <input #input (keyup)="_chatService.buscarContacto( input.value )" class="form-control p-20" type="text" placeholder="Buscar Contacto">
                         </div>
                         <perfect-scrollbar style="max-height: 400px;">
-
-                            <div class="row animated fadeIn" *ngIf="search">
+                            <!-- Cargando -->
+                            <div class="row animated fadeIn" *ngIf="_chatService.search">
 
                                 <div class="col-sm-12">
 
@@ -32,20 +32,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="alert alert-info" *ngIf="conversationsEmpty">
+                            <!-- Fin Cargando -->
+                            <div class="alert alert-info" *ngIf="_chatService.conversationsEmpty">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"> <span aria-hidden="true">×</span> </button>
                                 <h3 class="text-info"><i class="fa fa-exclamation-circle"></i> Hola</h3> Aun no inicias una conversacion, inicia una y diviertete
                             </div>
 
-                            <ul class="chatonline style-none " *ngIf="!search && !searchContac">
-                                <li *ngFor="let conversation of conversations">
-                                    <a (click)="cargarConversation( conversation._id )" href="javascript:void(0)"><img [src]="conversation.img | imagen" alt="user-img" class="img-circle"> <span>{{ conversation.nombre }} <small class="text-success">online</small></span></a>
+                            <ul class="chatonline style-none " *ngIf="!_chatService.search && !_chatService.searchContac">
+                                <li *ngFor="let conversation of _chatService.conversations">
+                                    <a (click)="_chatService.busquedaConversation( conversation._id )" href="javascript:void(0)"><img [src]="conversation.img | imagen" alt="user-img" class="img-circle"> <span>{{ conversation.nombre }} <small class="text-success">online</small></span></a>
                                 </li>
                                 <li class="p-20"></li>
                             </ul>
-                            <ul class="chatonline style-none " *ngIf="!search && searchContac">
-                                <li *ngFor="let contacto of contactos">
-                                    <a (click)="cargarConversation( contacto._id )" href="javascript:void(0)"><img [src]="contacto.img | imagen" alt="user-img" class="img-circle"> <span>{{ contacto.nombre }} <small class="text-success">online</small></span></a>
+                            <ul class="chatonline style-none " *ngIf="!_chatService.search && _chatService.searchContac">
+                                <li *ngFor="let contacto of _chatService.contactos">
+                                    <a (click)="_chatService.busquedaConversation( contacto._id )" href="javascript:void(0)"><img [src]="contacto.img | imagen" alt="user-img" class="img-circle"> <span>{{ contacto.nombre }} <small class="text-success">online</small></span></a>
                                 </li>
                                 <li class="p-20"></li>
                             </ul>
@@ -65,58 +66,21 @@
                         <div class="chat-rbox">
                             <ul class="chat-list p-20">
                                 <!--chat Row -->
-                                <li>
-                                    <div class="chat-img"><img src="assets/images/users/1.jpg" alt="user" /></div>
+                                <li [ngStyle]="{'reverse':_chatService.mensaje.author.nombre != _usuarioService.nombre }" *ngFor="let mensaje of _chatService.conversationFull">
+                                    <div class="chat-img"><img [src]="mensaje.author.img" alt="user" /></div>
                                     <div class="chat-content">
-                                        <h5>James Anderson</h5>
-                                        <div class="box bg-light-info">Lorem Ipsum is simply dummy text of the printing & type setting industry.</div>
+                                        <h5>{{ mensaje.author.nombre }}</h5>
+                                        <div class="box bg-light-info">{{ mensaje.body }}</div>
                                     </div>
-                                    <div class="chat-time">10:56 am</div>
+                                    <div class="chat-time">{{ mensaje.createdAt }}</div>
                                 </li>
-                                <!--chat Row -->
-                                <li>
-                                    <div class="chat-img"><img src="assets/images/users/2.jpg" alt="user" /></div>
-                                    <div class="chat-content">
-                                        <h5>Bianca Doe</h5>
-                                        <div class="box bg-light-info">It’s Great opportunity to work.</div>
-                                    </div>
-                                    <div class="chat-time">10:57 am</div>
-                                </li>
-                                <!--chat Row -->
-                                <li class="reverse">
-                                    <div class="chat-content">
-                                        <h5>Steave Doe</h5>
-                                        <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
-                                    </div>
-                                    <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
-                                    <div class="chat-time">10:57 am</div>
-                                </li>
-                                <!--chat Row -->
-                                <li class="reverse">
-                                    <div class="chat-content">
-                                        <h5>Steave Doe</h5>
-                                        <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
-                                    </div>
-                                    <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
-                                    <div class="chat-time">10:57 am</div>
-                                </li>
-                                <!--chat Row -->
-                                <li>
-                                    <div class="chat-img"><img src="assets/images/users/3.jpg" alt="user" /></div>
-                                    <div class="chat-content">
-                                        <h5>Angelina Rhodes</h5>
-                                        <div class="box bg-light-info">Well we have good budget for the project</div>
-                                    </div>
-                                    <div class="chat-time">11:00 am</div>
-                                </li>
-                                <!--chat Row -->
                             </ul>
                         </div>
                     </perfect-scrollbar>
                     <div class="card-body b-t">
                         <div class="row">
                             <div class="col-8">
-                                <textarea placeholder="Type your message here" class="form-control b-0"></textarea>
+                                <textarea [(ngModel)]="mensaje" #sendMensaje (keyup)="detecEnter( $event.code )" placeholder="Escriba su mensaje aqui" class="form-control b-0"></textarea>
                             </div>
                             <div class="col-4 text-right">
                                 <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-paper-plane-o"></i> </button>
