--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -15,11 +15,11 @@
                     <div class="open-panel"><i class="ti-angle-right"></i></div>
                     <div class="chat-left-inner">
                         <div class="form-material">
-                            <input #input (keyup)="_chatService.buscarContacto( input.value )" class="form-control p-20" type="text" placeholder="Buscar Contacto">
+                            <input #input (keyup)="buscarContacto( input.value )" class="form-control p-20" type="text" placeholder="Buscar Contacto">
                         </div>
-                        <perfect-scrollbar style="max-height: 400px;">
+                        <perfect-scrollbar id="first" style="max-height: 400px; min-height: 400px;">
                             <!-- Cargando -->
-                            <div class="row animated fadeIn" *ngIf="_chatService.search">
+                            <div class="row animated fadeIn" *ngIf="search">
 
                                 <div class="col-sm-12">
 
@@ -33,22 +33,24 @@
                                 </div>
                             </div>
                             <!-- Fin Cargando -->
-                            <div class="alert alert-info" *ngIf="_chatService.conversationsEmpty">
+                            <div class="alert alert-info" *ngIf="conversationsEmpty">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"> <span aria-hidden="true">×</span> </button>
                                 <h3 class="text-info"><i class="fa fa-exclamation-circle"></i> Hola</h3> Aun no inicias una conversacion, inicia una y diviertete
                             </div>
 
-                            <ul class="chatonline style-none " *ngIf="!_chatService.search && !_chatService.searchContac">
-                                <li *ngFor="let conversation of _chatService.conversations">
-                                    <a *ngFor="let chat of _chatService.conversations.participantsId" (click)="_chatService.busquedaConversation( conversation._id )" href="javascript:void(0)">
-                                        <img [src]="chat.img | imagen" alt="user-img" class="img-circle"> <span>{{ chat.nombre }} <small class="text-success">online</small></span>
-                                    </a>
+                            <ul class="chatonline style-none " *ngIf="!search && !searchContac">
+                                <li *ngFor="let conversation of conversations" (click)="busquedaConversation( conversation._id )">
+                                    <div *ngFor="let chat of conversation.participantsId">
+                                        <a *ngIf="_usuarioService.usuario.img != chat.img" href="javascript:void(0)">
+                                            <img [src]="chat.img | imagen" alt="user-img" class="img-circle"> <span>{{ chat.nombre }} <small *ngIf="conversation.online" class="text-success">online</small></span>
+                                        </a>
+                                    </div>
                                 </li>
                                 <li class="p-20"></li>
                             </ul>
-                            <ul class="chatonline style-none " *ngIf="!_chatService.search && _chatService.searchContac">
-                                <li *ngFor="let contacto of _chatService.contactos">
-                                    <a (click)="_chatService.busquedaConversation( contacto._id )" href="javascript:void(0)"><img [src]="contacto.img | imagen" alt="user-img" class="img-circle"> <span>{{ contacto.nombre }} <small class="text-success">online</small></span></a>
+                            <ul class="chatonline style-none " *ngIf="!search && searchContac">
+                                <li *ngFor="let contacto of contactos" (click)="busquedaConversationContac( contacto._id )">
+                                    <a href="javascript:void(0)"><img [src]="contacto.img | imagen" alt="user-img" class="img-circle"> <span>{{ contacto.nombre }}</span></a>
                                 </li>
                                 <li class="p-20"></li>
                             </ul>
@@ -63,29 +65,34 @@
                             <h3 class="box-title">Chat Message</h3>
                         </div>
                     </div>
-                    <perfect-scrollbar style="max-height: 320px;">
+                    <div id="chatScroll" style="max-height: 320px; min-height: 320px;" [perfectScrollbar]="config">
 
                         <div class="chat-rbox">
-                            <ul class="chat-list p-20">
+                            <ul class="chat-list p-20" *ngIf="selection">
                                 <!--chat Row -->
-                                <li [ngStyle]="{'reverse':_chatService.mensaje.author.nombre != _usuarioService.nombre }" *ngFor="let mensaje of _chatService.conversationFull">
-                                    <div class="chat-img"><img [src]="mensaje.author.img" alt="user" /></div>
-                                    <div class="chat-content">
-                                        <h5>{{ mensaje.author.nombre }}</h5>
-                                        <div class="box bg-light-info">{{ mensaje.body }}</div>
-                                    </div>
-                                    <div class="chat-time">{{ mensaje.createdAt }}</div>
-                                </li>
+                                <div *ngFor="let mensaje of conversationFull; let i = index">
+                                    <li [ngClass]="{'reverse': mensaje.author.nombre != _usuarioService.usuario.nombre}">
+
+                                        <div *ngIf="mensaje.author.nombre === _usuarioService.usuario.nombre" class="chat-img"><img [src]="mensaje.author.img | imagen" alt="user" /></div>
+                                        <div class="chat-content">
+                                            <h5>{{ mensaje.author.nombre }}</h5>
+                                            <div class="box bg-light-info" [ngClass]=" {'bg-light-info': mensaje.author.nombre === _usuarioService.usuario.nombre, 'bg-light-inverse':mensaje.author.nombre != _usuarioService.usuario.nombre } ">{{ mensaje.body }}</div>
+                                        </div>
+                                        <div *ngIf="mensaje.author.nombre != _usuarioService.usuario.nombre" class="chat-img"><img [src]="mensaje.author.img | imagen" alt="user" /></div>
+                                        <div class="chat-time">{{ mensaje.send }}</div>
+
+                                    </li>
+                                </div>
                             </ul>
                         </div>
-                    </perfect-scrollbar>
+                    </div>
                     <div class="card-body b-t">
                         <div class="row">
                             <div class="col-8">
                                 <textarea [(ngModel)]="mensaje" #sendMensaje (keyup)="detecEnter( $event.code )" placeholder="Escriba su mensaje aqui" class="form-control b-0"></textarea>
                             </div>
                             <div class="col-4 text-right">
-                                <button (click)="this._chatService.cargarConversations()" type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-paper-plane-o"></i> </button>
+                                <button (click)="this.cargarConversations()" type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-paper-plane-o"></i> </button>
                             </div>
                         </div>
                     </div>
