--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
                 <div class="d-flex no-block">
                     <div class="m-r-20 align-self-center"><img src="assets/images/icon/income-w.png" alt="Income"></div>
                     <div class="align-self-center">
-                        <h6 class="text-white m-t-10 m-b-0">Total Alumnos</h6>
+                        <h6 class="text-white m-t-10 m-b-0">Alumnos</h6>
                         <h2 class="m-t-0 text-white">953,000</h2>
                     </div>
                 </div>
@@ -18,7 +18,7 @@
                 <div class="d-flex no-block">
                     <div class="m-r-20 align-self-center"><img src="../assets/images/icon/expense-w.png" alt="Income"></div>
                     <div class="align-self-center">
-                        <h6 class="text-white m-t-10 m-b-0">Total Maestros</h6>
+                        <h6 class="text-white m-t-10 m-b-0">Maestros</h6>
                         <h2 class="m-t-0 text-white">236,000</h2>
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                 <div class="d-flex no-block">
                     <div class="m-r-20 align-self-center"><img src="../assets/images/icon/assets-w.png" alt="Income"></div>
                     <div class="align-self-center">
-                        <h6 class="text-white m-t-10 m-b-0">Total Administrativos</h6>
+                        <h6 class="text-white m-t-10 m-b-0">Administrativos</h6>
                         <h2 class="m-t-0 text-white">987,563</h2>
                     </div>
                 </div>
@@ -44,11 +44,17 @@
                 <div class="d-flex no-block">
                     <div class="m-r-20 align-self-center"><img src="../assets/images/icon/staff-w.png" alt="Income"></div>
                     <div class="align-self-center">
-                        <h6 class="text-white m-t-10 m-b-0">Total Staff</h6>
+                        <h6 class="text-white m-t-10 m-b-0">Ayudantes</h6>
                         <h2 class="m-t-0 text-white">987,563</h2>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12 text-center">
+        <ngx-charts-pie-grid #grafica [scheme]="colorScheme" [results]="single" (select)="onSelect($event)">
+        </ngx-charts-pie-grid>
     </div>
 </div>
