--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
                     <div class="m-r-20 align-self-center"><img src="assets/images/icon/income-w.png" alt="Income"></div>
                     <div class="align-self-center">
                         <h6 class="text-white m-t-10 m-b-0">Alumnos</h6>
-                        <h2 class="m-t-0 text-white">953,000</h2>
+                        <h2 class="m-t-0 text-white">{{intAlumno}}</h2>
                     </div>
                 </div>
             </div>
@@ -19,7 +19,7 @@
                     <div class="m-r-20 align-self-center"><img src="../assets/images/icon/expense-w.png" alt="Income"></div>
                     <div class="align-self-center">
                         <h6 class="text-white m-t-10 m-b-0">Maestros</h6>
-                        <h2 class="m-t-0 text-white">236,000</h2>
+                        <h2 class="m-t-0 text-white">{{intMaestro}}</h2>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                     <div class="m-r-20 align-self-center"><img src="../assets/images/icon/assets-w.png" alt="Income"></div>
                     <div class="align-self-center">
                         <h6 class="text-white m-t-10 m-b-0">Administrativos</h6>
-                        <h2 class="m-t-0 text-white">987,563</h2>
+                        <h2 class="m-t-0 text-white">{{intAdmin}}</h2>
                     </div>
                 </div>
             </div>
